force-app/main/default/objects/FundingBatchAccountRelation__c/FundingBatchAccountRelation__c.object-meta.xml
<CustomObject>
    <description>Junctions Batches and Accounts to specify which local authority has homes on the batch.</description>
    <label>Batch Account Relation</label>
    <nameField>
        <displayFormat>BAR-{00000}</displayFormat>
        <label>Relation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Account Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>