force-app/main/default/objects/FundingBatchAccountRelation__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <referenceTo>FundingBatch__c</referenceTo>
    <relationshipName>Consortium_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>